 - add a placeholder at the end of the imagetablewidget, so that can insert an image at the end and
   insert an image on the right when there is no image in the list.
 - Application Icon for YASW
 - autocalibration with a printed grid (line detection)
   o have a look at ppmunwarp http://diybookscanner.org/forum/viewtopic.php?f=19&t=2589
 - move image from left ro right
User requests:
 - Add the ability to take a checkerboard pattern as input to the de-warping stage.
 - A way to measure DPI in-situ. Allow the user to draw a line on the pic and inform yasw that the
   actual physical length of this line is x. You could then compute DPI by measuring the length of
   the drawn line in pixels and divide by length input.
   o I assume you would calculate DPI on the cropped image. In that case, use the DPI to also
     calculate and display the physical dimensions of the page or a sub-set of the page as selected
     by a user-defined bounding box.
 - Under rotation filter, allow user to draw a line to indicate what is 'horizontal' - (maybe even
   use 'Shift' key to force a horizontal line, i.e. deltaY = 0) Use the drawn line to calculate a
   finer rotation angle to straighten the page. (maybe name the two filters 'orientation' and 'rotation'
   to distinguish between them).
   -- when I rotate the page, seeing the thumbnail rotated as well.
   -- being able to "arrow down" through the pages quickly, viewing previews.
   -- When I exported to PDF, though, the app exported all the Left images, followed by (most of) the
      "right" images. It should alternate L/R, obviously. Also, I'm getting a white border on the top
      and the left of the images; I don't know if that's intentional or not, but I'd like to be able
      to turn it off.

201306xx; YASW 0.4
 - Fixed Ticket #2 (Image order not retained when project is reloaded.)
 - Fixed Ticket #1 (Display FileName instead of BaseName in the image list)