@@ -83,11 +83,7 @@
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="QLineEdit" name="imageWidth">
-       <property name="text">
-        <string>800</string>
-       </property>
-      </widget>
+      <widget class="QLineEdit" name="imageWidth"/>
      </item>
      <item row="2" column="0">
       <widget class="QLabel" name="labelHeight">
@@ -97,11 +93,7 @@
       </widget>
      </item>
      <item row="2" column="1">
-      <widget class="QLineEdit" name="imageHeight">
-       <property name="text">
-        <string>1200</string>
-       </property>
-      </widget>
+      <widget class="QLineEdit" name="imageHeight"/>
      </item>
      <item row="3" column="0">
       <widget class="QLabel" name="labelDPI">
@@ -160,5 +152,41 @@
   </customwidget>
  </customwidgets>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>imageWidth</sender>
+   <signal>textChanged(QString)</signal>
+   <receiver>ScalingWidget</receiver>
+   <slot>slotPropertyChanged()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>524</x>
+     <y>73</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>440</x>
+     <y>6</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>imageHeight</sender>
+   <signal>textChanged(QString)</signal>
+   <receiver>ScalingWidget</receiver>
+   <slot>slotPropertyChanged()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>491</x>
+     <y>102</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>453</x>
+     <y>164</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
+ <slots>
+  <slot>slotPropertyChanged()</slot>
+ </slots>
 </ui>
